service-entry/shifting-mysql-traffic-dns/service-and-workload-entries.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mysql-svc-entry
spec:
  hosts:
  - docker-mysql-v5.hung.org.hk
  location: MESH_INTERNAL
  ports:
  - number: 3306
    name: mysql
    protocol: TCP
  resolution: DNS
  workloadSelector:
    labels:
      database: mysql
